--- a/birdwatching.html
+++ b/birdwatching.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-	<link rel="stylesheet" href="./style2.css">   
+	<link rel="stylesheet" href="./style.css">   
     <title>Birdwatching</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300%7CCinzel+Decorative:700" rel="stylesheet">
     
